// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorPicker /> should display popup on button click with default colors, inside container 1`] = `
<div
  id="container"
>
  <div
    class="d-inline-block"
  >
    <button
      class="wrapper fill secondary medium"
      id="color-picker-4"
      type="button"
    >
      <div
        class="color"
        style="background-color: rgb(255, 255, 255);"
      />
    </button>
  </div>
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
        x-placement="right"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-content popover-body"
          >
            <div
              class="popup"
            >
              <button
                aria-label="color #EB144C"
                class="choice"
                style="background-color: rgb(235, 20, 76);"
                type="button"
              />
              <button
                aria-label="color #FF6900"
                class="choice"
                style="background-color: rgb(255, 105, 0);"
                type="button"
              />
              <button
                aria-label="color #FCB900"
                class="choice"
                style="background-color: rgb(252, 185, 0);"
                type="button"
              />
              <button
                aria-label="color #B5CC18"
                class="choice"
                style="background-color: rgb(181, 204, 24);"
                type="button"
              />
              <button
                aria-label="color #00D084"
                class="choice"
                style="background-color: rgb(0, 208, 132);"
                type="button"
              />
              <button
                aria-label="color #7BDCB5"
                class="choice"
                style="background-color: rgb(123, 220, 181);"
                type="button"
              />
              <button
                aria-label="color #8ED1FC"
                class="choice"
                style="background-color: rgb(142, 209, 252);"
                type="button"
              />
              <button
                aria-label="color #0693E3"
                class="choice"
                style="background-color: rgb(6, 147, 227);"
                type="button"
              />
              <button
                aria-label="color #9900EF"
                class="choice"
                style="background-color: rgb(153, 0, 239);"
                type="button"
              />
              <button
                aria-label="color #E03997"
                class="choice"
                style="background-color: rgb(224, 57, 151);"
                type="button"
              />
              <button
                aria-label="color #F78DA7"
                class="choice"
                style="background-color: rgb(247, 141, 167);"
                type="button"
              />
              <button
                aria-label="color #A5673F"
                class="choice"
                style="background-color: rgb(165, 103, 63);"
                type="button"
              />
              <button
                aria-label="color #ABB8C3"
                class="choice"
                style="background-color: rgb(171, 184, 195);"
                type="button"
              />
              <button
                aria-label="color #767676"
                class="choice"
                style="background-color: rgb(118, 118, 118);"
                type="button"
              />
              <input
                class="input form-control-sm form-control"
                placeholder="ex: #eeeeee"
                type="text"
                value="#fff"
              />
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColorPicker /> should display popup on button click with provided colors 1`] = `
<body>
  <div>
    <div
      class="d-inline-block"
    >
      <button
        class="wrapper fill secondary medium"
        id="color-picker-5"
        type="button"
      >
        Pick a color
      </button>
    </div>
  </div>
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
        x-placement="right"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-content popover-body"
          >
            <div
              class="popup"
            >
              <button
                aria-label="color #fff"
                class="choice"
                style="background-color: rgb(255, 255, 255);"
                type="button"
              />
              <input
                class="input form-control-sm form-control"
                placeholder="ex: #eeeeee"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`<ColorPicker /> should render with background color matching defaultValue 1`] = `
<div
  class="d-inline-block"
>
  <button
    class="wrapper fill secondary medium"
    id="color-picker-3"
    type="button"
  >
    <div
      class="color"
      style="background-color: rgb(0, 0, 0);"
    />
  </button>
</div>
`;

exports[`<ColorPicker /> should render with background color matching value 1`] = `
<div
  class="d-inline-block"
>
  <button
    class="wrapper fill secondary medium"
    id="color-picker-2"
    type="button"
  >
    <div
      class="color"
      style="background-color: rgb(255, 255, 255);"
    />
  </button>
</div>
`;

exports[`<ColorPicker /> should render with minimal props 1`] = `
<div
  class="d-inline-block"
>
  <button
    class="wrapper fill secondary medium"
    id="color-picker-1"
    type="button"
  >
    Pick a color
  </button>
</div>
`;
